# Nexios

./: .gitignore  .pre-commit-config.yaml  .pypirc  LICENSE  MANIFEST.in  Untitled.ipynb  a.db  codecov.yml  coverage.xml  databse.db  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  example.db  index.py  mypy.ini  nexios-2.2.6-py3-none-any.whl  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  test.py  test2.py  tests.py  tests.pyi  tox.ini
.github/: deploy-docs.yml
.github/workflows/: coverage.yml  deploy-docs.yml  deploy_pypi.yml  format-code.yml  run-tox.yaml  type-check.yaml
Nexio.egg-info/: PKG-INFO  SOURCES.txt
docs/: README.md  _coverpage.md  _sidebar.md  authentication.md  basic-example.md  cbc.md  cbv.md  comparison.md  contributing.md  cors.md  custom.css  exceptions.md  gzip.md  index.html  installation.md  introduction.md  lifespan.md  logging.md  middlewares.md  mkdocs.yml  package-lock.json  package.json  pagination.md  processing_inputs.md  request_and_response.md  robots.txt  routing.md  session.md  sitemap.xml  ssr.config.js  staticfiles.md  templating.md  tortoiseorm.md  websockets.md
docs/docs/: application.md  author.md  basic_routing.md  hello_world.md  index.md  installation.md  introduction.md
docs/docs/core-features/: exceptions.md  middleware.md  request-object.md  response-object.md  routing.md  session.md  validator.md  websocket.md
docs/docs/guides/: nexio-request.md  nexio-response.md  routing.md
docs/docs/styles/: carousel.css  custom.css
docs/plugins/: file-router.md  rpc.md
docs/site/: 404.html  author.html  basic_routing.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  hello_world.html  index.html  installation.html  introduction.html  search.html  setup.html  sitemap.xml
env/: pyvenv.cfg
examples/file_router/: main.py
examples/html_plugin/: main.py
examples/rpc/: client.py  server.py
migrations/models/: 0_20241112233556_init.py  1_20241114001222_update.py
nexio/: __init__.py  application.py  background.py  decorators.py  exception_handlers.py  files.py  filestorage.py  lifespan.py  request.py  response.py  routers.py  static.py  structs.py
nexio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nexio/cli/: create_project.py  main.py
nexio/config/: __init__.py  settings.py
nexio/http/: mixins.py  parsers.py  request.py  response.py
nexio/middlewares/: base.py  common.py  cors.py  logging.py
nexio/orm/: __init__.py  connection.py  exceptions.py  expressions.py  filters.py  functions.py  indexes.py  log.py  manager.py  models.py  query_utils.py  queryset.py  router.py  timezone.py  transactions.py  utils.py  validators.py
nexio/sessions/: __init__.py  middlewares.py  models.py  utils.py
nexio/utils/: async_utils.py  files.py  timezone.py
nexio/validator/: base.py  descriptor.py  fields.py
nexios/: __init__.py  __main__.py  _routing_utils.py  application.py  background.py  cbc.py  decorators.py  exception_handler.py  exceptions.py  filestorage.py  hooks.py  logging.py  openapi.py  pagination.py  routers.py  routing.py  routing_utils.py  static.py  status.py  structs.py  types.py  views.py
nexios/NValidator/: base.py  error_store.py  fields.py  schema.py  validate.py  warnings.py
nexios/_utils/: async_helpers.py  cuncurrency.py
nexios/auth/: __init__.py  base.py  decorator.py  exceptions.py  middleware.py
nexios/cli/: __init__.py  main.py
nexios/config/: __init__.py  base.py  settings.py
nexios/handlers/: not_found.py
nexios/http/: __init__.py  cookies_parser.py  formparsers.py  mixins.py  parsers.py  request.py  response.py
nexios/middlewares/: __init__.py  base.py  common.py  cors.py  csrf.py  gzip.py  logging.py  utils.py
nexios/nexios.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
nexios/plugins/: __init__.py
nexios/sessions/: base.py  db.py  db_models.py  file.py  middleware.py  middlewares.py  models.py  session_base.py  signed_cookies.py
nexios/testing/: __init__.py  client.py  transport.py
nexios/utils/: async_helpers.py  cuncurrency.py  files.py  pagination.py  validator.py
nexios/validator/: __init__.py  base.py  class_registry.py  decorators.py  descriptor.py  exceptions.py  fields.py  l.py  schema.py  utils.py
nexios/websockets/: __init__.py  base.py  channels.py  consumers.py  errors.py  utils.py
test/: __init__.py  test_application.py  test_middlewares.py  test_response.py  test_routing.py
test/static/: example.txt
testapp/: db.sqlite3-shm  db.sqlite3-wal  main.py
testapp/config/: database.py  settings.py
testapp/handlers/: routes.py
(+137 files in other folders)
