[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
include = ["nexios/py.typed"]
[tool.poetry]
name = "nexios"
version = "2.0.13"
description = "Nexios is a modern, high-performance ASGI web framework for Python."
authors = ["Chidebele Dunamis <techwithdunamix@example.com>"]
license = "MIT"
homepage = "https://github.com/techwithdunamix/nexios"
repository = "https://github.com/techwithdunamix/nexios"
documentation = "https://slowapi.readthedocs.io/en/latest/"
readme = "readme.md"
keywords = [
    "ASGI",
    "backend",
    "framework",
    "web",
    "Python",
    "async",
    "asynchronous",
    "fastapi",
    "web server",
    "API",
    "scalable",
    "real-time",
    "concurrent",
    "HTTP",
    "websocket"
]

[tool.poetry.dependencies]
python = ">=3.10"
uvicorn = "0.22.0"
anyio = "4.3.0"
itsdangerous = "2.1.2"
python-multipart = "0.0.6"
pyjwt = "2.7.0"
typing-extensions = "4.12.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.910"
pytest = "~=6.2.5"
mkdocs = "^1.2.3"
coverage = "^6.3"
httpx = "^0.23.3"
mkdocs-material = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-multirepo-plugin = "*"
pymdown-extensions = "*"
typing-extensions = "4.12.2"




[tool.poetry.scripts]
nexios = "nexios.cli.main:nexios"

[tool.pytest.ini_options]
asyncio_mode = "auto"
