[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
include = ["nexios/py.typed"]


[tool.poetry]
name = "nexios"
version = "2.1.0rc2"
description = "Nexios is a modern, high-performance ASGI web framework for Python."
authors = ["Chidebele Dunamis <techwithdunamix@example.com>"]
license = "MIT"
homepage = "https://github.com/techwithdunamix/nexios"
repository = "https://github.com/techwithdunamix/nexios"
documentation = "https://slowapi.readthedocs.io/en/latest/"
readme = "readme.md"
keywords = [
    "ASGI",
    "backend",
    "framework",
    "web",
    "Python",
    "async",
    "asynchronous",
    "fastapi",
    "web server",
    "API",
    "scalable",
    "real-time",
    "concurrent",
    "HTTP",
    "websocket"
]

[tool.poetry.dependencies]
python = ">=3.9"
uvicorn = "0.22.0"
anyio = "4.3.0"
itsdangerous = "2.1.2"
python-multipart = "0.0.6"
pyjwt = "2.7.0"
typing-extensions = "4.12.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.910"
pytest = "~=8.3.4"
mkdocs = "^1.2.3"
coverage = "^6.3"
httpx = "^0.23.3"
typing-extensions = "4.12.2"
pytest-asyncio = "^0.25.3"



[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
