[metadata]
name = nexios
version = 0.0.1
author = Dunamix
author_email = techwithdunamix@gmail.com
description=Nexio is a modern, high-performance ASGI web framework for Python that emphasizes developer productivity without sacrificing speed. Built on top of industry-standard ASGI specifications, Nexio provides an elegant, batteries-included approach to web development with built-in support for sessions, file storage, and background task processing.

long_description = file: readme.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = nexio
packages = find:
python_requires = >=3.6

[options.packages.find]
where = nexio